Button on mobile fix

--- a/style.css
+++ b/style.css
@@ -128,3 +128,15 @@ Content
       transform: translate(-50%,-50%) scale(0.01);      
   }
 }
+
+.btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  cursor: pointer;
+  z-index: 10;
+  text-transform: uppercase;
+  font-weight: 700;
+}
